version 1.2.8
- correct Spanish help strings
- fix font problem in session window
- fix for exporting time-series data to R version 1.9
- add option to export data to PcGive .dat format (thanks to
  Michal Kurcewicz)
- enable TRAMO analysis of annual time-series data

6/13/2004 version 1.2.7
- add Italian helpfiles (thanks to Cristian Rigamonti)
- update Spanish helpfiles 
- add start-up option "-e" or "--english" to force use of
  English strings when LANG would indicate translation
  (also recognize environment variable GRETL_LANG: if this
  is "english" or "C", run in English)
- allow for missing values (silent) in audio graphs
- add a few keystrokes to the main gretl window:
  'a': audio (read list of variables)
  'x': stop audio
  'e': edit attributes of current variable
  't': plot current variable
- make start-up tests for tramo and x12a less verbose
- fix bug in deletion of scalar variables from the dataset
- fix bug in built-in spreadsheet: clicking in a blank
  column could crash gretl 
- fix broken behavior of built-in spreadsheet for gtk
  2.0.X versions
- fix various bug and typos in documentation
- build tweaks for OS X
- make available a pre-built disk image for OS X

5/25/2004 version 1.2.6
- add Hodrick-Prescott filter, as "hpfilt" function in the
  genr command
- revamp xls importer: should now be substantially more
  robust
- begin adding experimental audio graph feature for visually
  impaired users
- improve handling of non-ASCII characters in data files
- fixes for Spanish help files
- more fixes for build process
- GNU Octave data export: write all data as single matrix
- fix printing of "periods" in periodogram output (thanks to
  Tadeusz Kufel)
- fix generation of periodic dummy variables for daily data
  (again thanks to Tadeusz Kufel)
- with gtk >= 2.4.0 on Linux, use the new gtk file chooser
- update the Windows gtk version to 2.4.1

5/04/2004 version 1.2.5
- fix problem with acf and pacf calculations