@@ -5,6 +5,8 @@ version 1.2.8
 - add option to export data to PcGive .dat format (thanks to
   Michal Kurcewicz)
 - enable TRAMO analysis of annual time-series data
+- add start-up option to dump gretl configuration to a text file
+  ('-c' or '--dump')
 
 6/13/2004 version 1.2.7
 - add Italian helpfiles (thanks to Cristian Rigamonti)
